--- a/config/settings.yml
+++ b/config/settings.yml
@@ -7,6 +7,14 @@ defaults: &defaults
     token: <%= ENV['TWITTER_TOKEN'] %>
     secret: <%= ENV['TWITTER_SECRET'] %>
 
+test:
+  github:
+    token: aaa
+    secret: bbb
+  twitter:
+    token: ccc
+    secret: ddd
+
 development:
   <<: *defaults
 
